# rust-live-view

./: .gitignore  Cargo.toml  README.md  package.json  webpack.config.js
assets/js/: index.js
src/: main.rs  message.rs  responder.rs  view.rs
static/: index.html
static/javascript/: index.js
templates/: counter.html  index.html
