[package]
name = "rust-live-view"
version = "0.1.0"
authors = ["Robin Monjo <robinmonjo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix-files = "0"

env_logger = "0.7.1"

